k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-r2dbc
  namespace: spring-boot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-r2dbc
  template:
    metadata:
      labels:
        app: spring-boot-r2dbc
    spec:
      serviceAccountName: spring-boot-sa
      containers:
        - name: app
          image: ${IMAGE_TAG}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/tutorials
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/tutorials
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi

        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2
          args:
            - "--structured-logs"
            - "--address=127.0.0.1"
            - "--port=5432"
            - "spring-boot-demo-487908:us-central1:spring-boot-db"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
